Fix z-index of passepartout

--- a/src/scripts/components/passepartout/passepartout.scss
+++ b/src/scripts/components/passepartout/passepartout.scss
@@ -5,7 +5,7 @@
   position: absolute;
   transition: opacity 0.3s linear;
   width: 100%;
-  z-index: 1;
+  z-index: 3;
 
   &.animate {
     opacity: 1;
